--- a/config/turtle_settings.json
+++ b/config/turtle_settings.json
@@ -4,12 +4,13 @@
     "password": "UP7d??y4Wg",
     "server": "FTMO-Demo2",
     "mt5_pathway": "C:\\Program Files\\FTMO MetaTrader 5\\terminal64.exe",
-    "symbols": ["EURUSD", "XAUUSD", "US30"],
+    "symbols": ["XAUUSD", "US30"],
     "symbol_mapping": {
       "US30": "US30.cash"
     },
-    "timeframe": "D1",
-    "risk_per_trade": 0.01,
-    "account_balance": 100000
+    "timeframe": "H4",
+    "risk_per_trade": 0.015,
+    "account_balance": 100000,
+    "leverage": 10
   }
 }
