--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
-name: TurtleTrader Tests
+# .github/workflows/ci.yml
+name: TurtleTrader CI
 
 on:
   push:
@@ -22,4 +23,4 @@ jobs:
         pip install pytest pytest-cov
     - name: Run tests
       run: |
-        pytest --cov=turtle_trader tests/
+        pytest --cov=src tests/
