Commit lokale wijzigingen en nieuwe bestanden

--- a/config/settings.json
+++ b/config/settings.json
@@ -1,4 +1,3 @@
-// config/settings.json
 {
   "mt5": {
     "login": 1520533067,
@@ -23,7 +22,7 @@
     "leverage": 30
   },
   "strategy": {
-    "name": "turtle_trader",
+    "name": "turtle",
     "swing_mode": true,
     "entry_period": 40,
     "exit_period": 20,
