Add qodana.yaml file

--- a/qodana.yaml
+++ b/qodana.yaml
@@ -1,75 +1,6 @@
-#-------------------------------------------------------------------------------#
-#                 Qodana configuratie voor Sophy Trading Framework              #
-#             https://www.jetbrains.com/help/qodana/qodana-yaml.html            #
-#-------------------------------------------------------------------------------#
 version: "1.0"
-
-# Basisinspectie profiel
+linter: jetbrains/qodana-jvm:2024.3
 profile:
   name: qodana.recommended
-
-# Trading-specifieke inspectieregels
 include:
-  # Numerieke precisie en type controles (kritiek voor ordergroottes)
-  - name: "PyTypeChecker"
-    paths:
-      - "src/strategy/*.py"  # Trading strategieën
-      - "src/risk/*.py"      # Risicomanagement
-      - "src/connector/*.py" # Marktconnectiviteit
-      - "src/analysis/*.py"  # Performance analyse
-  - name: "PyFloatingPointDivisionIssue"
-    paths:
-      - "src/strategy/*.py"
-      - "src/risk/*.py"
-      - "src/connector/*.py"
-      - "src/analysis/*.py"
-  - name: "PyStatementEffect"
-    paths:
-      - "src/strategy/*.py"
-      - "src/risk/*.py"
-      - "src/connector/*.py"
-      - "src/analysis/*.py"
-
-  # Concurrency en threading (essentieel voor marktdata verwerking)
-  - name: "ThreadWithDefaultRunMethod"
-    paths:
-      - "src/connector/*.py" # Relevant voor marktconnectiviteit
-  - name: "PyThreadingIssuesInspection"
-    paths:
-      - "src/connector/*.py"
-
-  # Risicomanagement en exception handling
-  - name: "PyExceptionInherit"
-    paths:
-      - "src/risk/*.py"
-  - name: "PyBroadException"
-    paths:
-      - "src/risk/*.py"
-  - name: "PyUnusedLocal"
-    paths:
-      - "src/strategy/*.py"
-      - "src/risk/*.py"
-
-# Uitsluiten van test infrastructuur en niet-kritieke componenten
-exclude:
-  - name: "PyMethodMayBeStatic"
-    paths:
-      - "tests/**"
-  - name: "PyUnresolvedReferences"
-    paths:
-      - "tests/conftest.py"
-  - paths:
-      - "src/presentation/**" # UI componenten
-      - "**/__pycache__/**"   # Gegenereerde bestanden
-      - "**/venv/**"          # Virtuele omgeving
-
-# Specifieke linter versie
-linter: jetbrains/qodana-python:2024.3
-
-# CI/CD integratie instellingen
-bootstrap: |
-  pip install -r requirements.txt
-  python -m pytest tests/unit/test_risk_manager.py -v
-
-# Drempelwaarde voor kwaliteitspoort
-failThreshold: 100  # Begin streng, pas aan indien nodig
+  - name: CheckDependencyLicenses
