--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,10 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-          pip install pytest pytest-cov
+          pip install pytest pytest-cov mypy types-all
       - name: Run tests
         run: |
           pytest --cov=src tests/
+      - name: Type checking with mypy
+        run: |
+          mypy src
